오류 수정해야함

--- a/index.html
+++ b/index.html
@@ -52,6 +52,54 @@
   </head>
 
   <body>
+    <div class="modal-wrap">
+      <h2><a href="#" class="modal-logo">logo</a></h2>
+      <a href="#" class="modal-close-btn"></a>
+      <div class="modal-menu">
+        <ul class="modal-main-list">
+          <li>
+            <a href="#">토끼정</a>
+            <ul class="modal-sub-menu">
+              <li><a href="#">스토리</a></li>
+              <li><a href="#">컨셉</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">메뉴</a>
+            <ul class="modal-sub-menu">
+              <li><a href="#">겨울 시즌메뉴</a></li>
+              <li><a href="#">토끼밥상</a></li>
+              <li><a href="#">카레</a></li>
+              <li><a href="#">덮밥</a></li>
+              <li><a href="#">면요리</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">매장</a>
+            <ul class="modal-sub-menu">
+              <li><a href="#">매장검색</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">창업안내</a>
+            <ul class="modal-sub-menu">
+              <li><a href="#">브랜드 경쟁력</a></li>
+              <li><a href="#">창업 절차 및 비용</a></li>
+              <li><a href="#">창업 Q&A</a></li>
+              <li><a href="#">창업 상담 신청</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">고객 문의</a>
+            <ul class="modal-sub-menu">
+              <li><a href="#">유용한 질문(FAQ)</a></li>
+              <li><a href="#">고객의 소리</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="wrap">
       <!-- header -->
       <header class="header">
@@ -156,7 +204,10 @@
         </p>
         <div class="swiper-container sw-bestmenu">
           <div class="swiper-wrapper">
-            <div class="swiper-slide ss-1">
+            <div class="swiper-slide">
+              <div class="sw-bestmenu-img">
+                <img src="images/cont_slide_bg01.jpg" alt="" />
+              </div>
               <div class="txt-box">
                 <h3>토끼정 크림카레우동</h3>
                 <p>
@@ -170,7 +221,10 @@
               </div>
             </div>
 
-            <div class="swiper-slide ss-2">
+            <div class="swiper-slide">
+              <div class="sw-bestmenu-img">
+                <img src="images/cont_slide_bg02.jpg" alt="" />
+              </div>
               <div class="txt-box">
                 <h3>철판 큐브 스테이크 정식</h3>
                 <p>
@@ -184,7 +238,10 @@
               </div>
             </div>
 
-            <div class="swiper-slide ss-3">
+            <div class="swiper-slide">
+              <div class="sw-bestmenu-img">
+                <img src="images/cont_slide_bg03.jpg" alt="" />
+              </div>
               <div class="txt-box">
                 <h3>프리미엄 카츠 정식</h3>
                 <p>
@@ -198,7 +255,10 @@
               </div>
             </div>
 
-            <div class="swiper-slide ss-4">
+            <div class="swiper-slide">
+              <div class="sw-bestmenu-img">
+                <img src="images/cont_slide_bg04.jpg" alt="" />
+              </div>
               <div class="txt-box">
                 <h3>토끼정 카레</h3>
                 <p>
@@ -212,7 +272,10 @@
               </div>
             </div>
 
-            <div class="swiper-slide ss-5">
+            <div class="swiper-slide">
+              <div class="sw-bestmenu-img">
+                <img src="images/cont_slide_bg05.jpg" alt="" />
+              </div>
               <div class="txt-box">
                 <h3>토끼정 고로케</h3>
                 <p>
@@ -226,8 +289,10 @@
               </div>
             </div>
           </div>
-          <div class="swiper-pagination bsm-pagination"></div>
         </div>
+        <div class="swiper-pagination bsm-pagination"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
       </section>
 
       <!-- introduce -->
